# diplom

./: .gitignore  CMakeLists.txt  cmake.cpp  cmake_freebsd.cpp  cmake_freebsd.h  cmake_opensuse.h  cmake_trace.h  cmake_trace_freebsd.h  cmake_trace_opensuse.h  cmake_trace_ubuntu.h  cmake_ubuntu.cpp  cmake_ubuntu.h  freebsd.cpp  freebsd.h  linux.cpp  linux.h  main.cpp  opensuse.cpp  opensuse.h  os.cpp  os.h  porting_copy  porting_copy.cpp  porting_packages.cpp  porting_packages_oop.cpp  porting_packages_oop_all.cpp  porting_packages_wind.cpp  porting_packages_wind_finish.cpp  porting_packages_windows.cpp  prog-01  tar_test  ubuntu.cpp  ubuntu.h  unix.cpp  unix.h  windows.cpp  windows.h
